--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.1" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- 명조체 부분 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
   </head>
@@ -22,4 +24,16 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    @font-face {
+      font-family: 'GowunDodum-Regular';
+      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/GowunDodum-Regular.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    } 
+    /* 명조체 부분 */
+    #app {
+      font-family: 'GowunDodum-Regular';
+    }
+  </style>
 </html>
